--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: "3.1"
 services:
     migration-database:
-        build: ./database
-        image: ebauschatz/migration-database:1.0
+        # build: ./database
+        image: ebauschatz/migration-database:1.1
         ports:
             - 3306:3306
         restart: always
@@ -11,8 +11,8 @@ services:
         volumes:
         - db-data:/var/lib/mysql
     migration-backend:
-        build: ./backend
-        image: ebauschatz/migration-backend:1.0
+        # build: ./backend
+        image: ebauschatz/migration-backend:1.1
         ports:
             - 8000:8000
         depends_on:
@@ -21,8 +21,8 @@ services:
         command: >
             sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     migration-frontend:
-        build: ./frontend
-        image: ebauschatz/migration-frontend:1.0
+        # build: ./frontend
+        image: ebauschatz/migration-frontend:1.1
         ports:
             - 3000:3000
             - 80:80
